fixed sidebar and added pages

--- a/frontend/src/styles/sidebar.css
+++ b/frontend/src/styles/sidebar.css
@@ -2,18 +2,23 @@
   background-color: #fbf9f7;
   padding: 10px;
   height: 79.35vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .sidebar-el {
-  margin: 10px;
+  margin: 3px;
   padding: 10px;
   font-family: "Roboto", sans-serif;
   text-align: center;
+  border: none;
+  background-color: inherit;
+  cursor: pointer;
+  border-radius: 5px;
 }
 
 .active {
   border: 1px solid #fee7e2;
   color: #faa999;
   background-color: #fee7e2;
-  border-radius: 5px;
 }
